--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = ">=3.11,<3.13"
-torch = "^2.0.1"
+torch = "2.0.0"
 transformers = "4.28.1"
 sentencepiece = "^0.1.97"
 beautifulsoup4 = "^4.11.2"
